--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,9 @@ nav{
     background-color: rgba(0, 0, 255, 0.2);
 }
 /*pagina de contacto*/
+main{
+    width: 100%;
+}
 .registro-contacto{
     margin: 0px 60px 0px 60px;
     display: flex;
@@ -309,6 +312,15 @@ nav{
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 5px;
+}
+input{
+    border: none;
+    font-size: 16px;
+    margin: 0;
+    padding: 15px;
+    width: 100%;
+    color: #64696d;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) ;
 }
 input:focus{
     border: 2px solid black;
