--- a/css/style.css
+++ b/css/style.css
@@ -278,8 +278,10 @@ nav{
     background-color: rgba(0, 0, 255, 0.2);
 }
 /*pagina de contacto*/
-main{
+main registro .registro-contacto{
     width: 100%;
+    height: 100%;
+    padding-bottom: 10%;
 }
 .registro-contacto{
     margin: 0px 60px 0px 60px;
@@ -293,7 +295,8 @@ main{
 
 .registro-contacto h2{
     font-size: 35px;
-    margin: 20px;
+    margin: 20%;
+
 }
 
 .contacto{
