--- a/scss/components/_habitaciones.scss
+++ b/scss/components/_habitaciones.scss
@@ -48,7 +48,7 @@ main{
                 background-color: rgba(240, 248, 255, 0.221);
                 margin: 35px 50px 35px 50px;
                 h3{
-                    margin: 25px;
+                    margin: auto;
                     color: aliceblue;
                     font-size: 30px;
                     font-family: Arial, Helvetica, sans-serif;
@@ -89,7 +89,7 @@ main{
                 background-color: rgba(240, 248, 255, 0.221);
                 margin: 35px 50px 35px 50px;
                 h3{
-                    margin: 25px;
+                    margin: auto;
                     color: aliceblue;
                     font-size: 30px;
                     font-family: Arial, Helvetica, sans-serif;
