--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -4,6 +4,7 @@ main {
         background-image: url(../img/welcome.jpg);
         background-attachment: fixed;
         background-repeat: no-repeat;
+        object-fit: fill;
         background-size: cover;
         background-position: center;
         height: 100vh;
@@ -24,12 +25,13 @@ main {
             width: 100%;
             }
         }
-
-        p {
-            font-size: 25px;
-            margin: 40px;
-            padding-left: 30%;
-            padding-right: 30%;
+        .pbienvenidos{
+            p {
+                font-size: 25px;
+                margin: 40px;
+                padding-left: 30%;
+                padding-right: 30%;
+            }
         }
     }
 
@@ -39,6 +41,7 @@ main {
         height: auto;
         width: auto;
         background-image: url(../img/sombrilla.jpg);
+        object-fit: fill;
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
@@ -79,6 +82,7 @@ main {
         padding-top: 30px;
         padding-bottom: 50px;
         background-image: url(../img/pasillo.jpg);
+        object-fit: cover;
         background-attachment: fixed;
         background-repeat: no-repeat;
         background-size: cover;
@@ -129,6 +133,7 @@ main {
                 margin: 35px 50px 35px 50px;
 
                 h3 {
+                    text-align: center;
                     margin: 25px;
                     color: nth($colores,1);
                     font-size: 30px;
@@ -172,6 +177,7 @@ main {
                 margin: 35px 50px 35px 50px;
 
                 h3 {
+                    text-align: center;
                     margin: 25px;
                     color: nth($colores,1);
                     font-size: 30px;
